--- a/style.css
+++ b/style.css
@@ -369,12 +369,105 @@ body {
 }
 
 
-
-
-
 /*--- front-pageのスタイル ---*/
+#section01 {
+    position: relative;
+}
+#section01 .bg {
+    position: absolute;
+    width: calc(100vw / 36 * 18);
+    height: calc(100vh * 1.3);
+    top: 0;
+    right: calc(100vw / 36 * 6);
+    bottom: calc(100vh * -0.097);
+}
+#section01 .bg div {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 100%;
+    background: #f5f6f8;
+}
+
+.l-text01 h1,
+.l-text01 .h1cover {
+    position: absolute;
+    top: calc(100vh * 0.357);
+    left: calc(100vw * 0.111);
+    z-index: 2;
+    background-size: contain;
+}
+
+.l-text01 h1 img {
+    width: 50%;
+}
+
+.carousel1 {
+    position: absolute;
+    width: calc(100vw / 36 * 19.144);
+    top: 0;
+    right: calc(100vw / 36 * 3);
+    bottom: 0;
+}
+/*
+.i-wrapper {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+*/
+.i-wrapper ul li img {
+    width: 100%;
+}
+.carouselborder {
+    width: 30px;
+    left: 0;
+    top: calc(100vh * 0.357);
+    bottom:calc(100vh * 0.121);
+}
+.carouselborder div {
+}
+
+/*--- セクション2のスタイル ---*/
+#section02 {
+    position: relative;
+}
+#section02 .bg {
+    position: absolute;
+    left: 0;
+    top: calc(100vh * 0.3);
+    width: calc(100vw / 36 * 11);
+    height: calc(100vw * 0.377);
+}
+#section02 .bg div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #0e1827;
+}
+.carousel2 {
+    position: absolute;
+    width: calc(100vw / 36 * 13);
+    top: calc(100vh * 0.2);
+    left: calc(100vw / 36 * 3);
+}
+
+.carouselborder div {
+    width: calc(100vw / 36 * 13);
+    height: 10px;
+    background: linear-gradient(to right, #f15a24, #ffff00);
+}
+
+
 /*--- pageのスタイル ---*/
+
 /*--- singleのスタイル ---*/
+
 /*--- footerのスタイル ---*/
 
 
