--- a/style.css
+++ b/style.css
@@ -521,6 +521,28 @@ body {
 input[type=checkbox], input[type=radio] {
     transform: scale(1.9);
 }
+/*-- A型事業所 --*/
+.bg-A-img1 {
+    position: relative;
+    height: 350px;
+    background-image: url(images/office_a-img1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-A-img1::before {
+	position: absolute;
+    content: ' ';
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+    background-color: rgba(4, 6, 6, 0.3);
+}
+.a-box1 {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+}
 /*--- footerのスタイル ---*/
 
 
