--- a/style.css
+++ b/style.css
@@ -651,15 +651,32 @@ body {
 }
 
 /*--- pageのスタイル ---*/
-
+.testimg {
+    z-index: -999;
+    position: absolute;
+    top: -20px;
+    opacity: .7;
+}
 /*--- singleのスタイル ---*/
+.pb135 {
+    padding-bottom: 135px;
 /*-- 会社概要ページ --*/
+}
+.table {
+    width: 82%;
+    margin-bottom: 1rem;
+    color: #212529;
+    margin-left: 90px;
+}
 .table th {
-    width: 30%;
+    width: 28%;
 }
 .table td, .table th {
-    padding: 1.8rem !important;
+    padding-top: 2.4rem !important;
+    padding-bottom: 2.4rem !important;
+    padding-left: 0px !important;
     font-weight: bolder;
+    font-size: 20px;
     border-top: 2px solid #333 !important;
 }
 /*-- お問い合わせページ --*/
@@ -768,6 +785,23 @@ input[type=checkbox], input[type=radio] {
     text-indent:-999px;
 }
 /*--- footerのスタイル ---*/
+.pl90 {
+    padding-left: 90px;
+}
+.footer-box {
+    padding-left: 115px;
+}
+.footer-logo1 {
+    width: 200px;
+    margin-left: -15px;
+}
+.footer-logo2 {
+    width: 114px;
+}
+.footer-text {
+    font-size: 18px;
+    padding-top: 20px;
+}
 .bg-footer {
     background-color: rgba(4, 6, 6, 1);
 }
