--- a/style.css
+++ b/style.css
@@ -372,6 +372,75 @@ body {
     padding-bottom: 10px;
 }
 
+/* メニュー本体 */
+#global-nav {
+position: fixed;
+	z-index: 4;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #FFF;
+	display: none;
+}
+
+#global-nav .main {
+	display: flex;
+	margin-right: calc(100vw / 36 * 3);
+	height: 100%;
+}
+
+#global-nav .main li {
+	height: 100%;
+	flex: 1;
+	flex-grow: 1;
+	border-right: 1px solid #ededed;
+}
+
+#global-nav .main li .hoverArea {
+	display: block;
+	height: 100%;
+	position: relative;
+	transition: color 400ms ease;
+}
+
+#global-nav .main li .hoverArea p {
+	position: absolute;
+	top: 50%;
+	left: calc(100vw / 36);
+	right: calc(100vw / 36);
+	transform: translateY(-50%);
+	font-size: 20px;
+	font-size: calc(100vw * 0.0131);
+	white-space: nowrap;
+	padding-bottom: calc(100vw * 0.0131);
+}
+
+#global-nav .main li .hoverArea p span {
+	display: block;
+	margin-top: calc(100vw * 0.0069);
+	font-size: calc(100vw * 0.0076);
+}
+
+#global-nav .main li .hoverArea p:before {
+	content: "";
+	display: block;
+	width: 0;
+	height: 2px;
+	background: #161f2e;
+	position: absolute;
+	left: 0;
+	bottom: -2px;
+	transition: background 400ms ease, width 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+
+#global-nav .main li .hoverArea p.show:before {
+	width: 20px;
+}
+
+#global-nav .main li div.hoverArea {
+	opacity: 0.3;
+}
 
 /*---------------------------
  3.front-pageのスタイル 
