--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ body {
 .vertical {
     margin-top: 10px;
     position: absolute;
-    top:144px;
+    top:calc(100vh / 5 * 2);
     right: 25px;
 }
 .vertical li {
@@ -373,8 +373,21 @@ body {
 }
 
 /* メニュー本体 */
+#global-nav #globHeader {
+	height: 60px;
+}
+#global-nav #globHeader a {
+	position: relative;
+	top: 50px;
+	left: calc(100vw / 18.75 + 7.5px);
+}
+.gillSansNovaMedium {
+	color: #0e1827;
+	font-weight: 500;
+	font-style: normal;
+}
 #global-nav {
-position: fixed;
+	position: fixed;
 	z-index: 4;
 	top: 0;
 	left: 0;
@@ -388,6 +401,7 @@ position: fixed;
 	display: flex;
 	margin-right: calc(100vw / 36 * 3);
 	height: 100%;
+	margin-top: 85px;
 }
 
 #global-nav .main li {
@@ -406,7 +420,7 @@ position: fixed;
 
 #global-nav .main li .hoverArea p {
 	position: absolute;
-	top: 50%;
+	top: 35%;
 	left: calc(100vw / 36);
 	right: calc(100vw / 36);
 	transform: translateY(-50%);
@@ -440,6 +454,83 @@ position: fixed;
 
 #global-nav .main li div.hoverArea {
 	opacity: 0.3;
+}
+
+/* メニューマウスオーバー時の写真 */
+#global-nav .main li .hoverArea {
+	overflow: hidden;
+	display: block;
+}
+#global-nav .main li .hoverArea:before {
+	content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	opacity: 0;
+	transition: opacity 1000ms cubic-bezier(0.19, 1, 0.22, 1), transform 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+	transform: scale(1.1);
+}
+#global-nav .main li a:hover .gillSansNovaMedium {
+	color: #FFF;
+}
+#global-nav .main li a:hover {
+	color: #FFF;
+}
+#global-nav .main li a:hover:before {
+	opacity: 1;
+	transform: scale(1);
+}
+#global-nav .main li a:hover p:before {
+	background: #FFF;
+	animation: global-navHover 600ms ease;
+}
+#global-nav .main li._1 a:before {
+	background-image: url(images/menu_01.jpg);
+}
+#global-nav .main li._2 a:before {
+	background-image: url(images/menu_02.jpg);
+}
+#global-nav .main li._3 a:before {
+	background-image: url(images/menu_03.jpg);
+}
+#global-nav .main li._4 a:before {
+	background-image: url(images/menu_04.jpg);
+}
+#global-nav .main li._5 a:before {
+	background-image: url(images/menu_05.jpg);
+}
+#global-nav .main li._6 a:before {
+	background-image: url(images/menu_06.jpg);
+}
+
+/* メニュー展開後下部の著作権表示 */
+.gillSansNovaBook {
+  font-weight: 400;
+  font-style: normal;
+}
+
+#global-nav .lower {
+	position: absolute;
+	left: calc(100vw / 36 * 2);
+	bottom: calc(100vh * 0.09);
+	display: flex;
+	align-items: flex-end;
+	flex-direction: row-reverse;
+	line-height: 20px;
+	color: #FFF;
+}
+#global-nav .lower .copyright {
+	mix-blend-mode: difference;
+	font-size: 10px;
+}
+#global-nav .lower .copyright span {
+	display: block;
 }
 
 /*---------------------------
