--- a/responsive.css
+++ b/responsive.css
@@ -25,16 +25,33 @@
 /*	0. Document
 /* -------------------------------------------------------------------------------- */
 
-@media screen and (max-width: 575.98px) {}
-@media screen and (min-width: 576px) and (max-width: 767.98px){}
-@media screen and (min-width: 768px) and (max-width: 991.98px){}
+@media screen and (max-width: 575.98px) {
+}
+@media screen and (min-width: 576px) and (max-width: 767.98px){
+}
+@media screen and (min-width: 768px) and (max-width: 991.98px){
+}
 @media screen and (min-width: 992px) and (max-width: 1199.98px){}
 @media screen and (min-width:1200px){}
 
 /* -------------------------------------------------------------------------------- */
 /*	1. Font
 /* -------------------------------------------------------------------------------- */
-
+@media screen and (max-width: 990px) {
+    body {
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 770px) {
+    body {
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 580px) {
+    body {
+        font-size: 11px;
+    }
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	2. Frame
@@ -50,7 +67,22 @@
 /* -------------------------------------------------------------------------------- */
 /*	4. Header
 /* -------------------------------------------------------------------------------- */
+@media screen and (max-width: 990px) and (min-width: 1024px) {
+    
+}
 
+@media screen and (max-width: 990px) and (min-width: 770px) {
+    .vertical {
+        position: absolute;
+        right: 0;
+    }
+}
+@media screen and (max-width: 770px) {
+    .vertical {
+        position: absolute;
+        right: 0;
+    }
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	5. Menu Navigation
