--- a/responsive.css
+++ b/responsive.css
@@ -460,6 +460,29 @@
     .table td, .table th {
         font-size: 16px !important;
     }
+    .b-topbox {
+        padding-top: 80px;
+    }
+    .b-topbox div img {
+        width: 100% !important;
+    }
+    .b-toptext {
+        font-size: 18px !important;
+        font-weight: 500 !important;
+        line-height: 1.5;
+        letter-spacing: .005em;
+        padding-bottom: 110px;
+    } 
+    .b-box-title {
+        font-size: 30px;
+        font-weight: 500 !important;
+    }
+    .a-box-text,.b-box-text {
+        font-size: 16px;
+    }
+    .b-wrapper {
+        padding-bottom: 100px;
+    }
 }
 @media screen and (min-width: 576px) and (max-width: 767.98px){
     .contact-container {
@@ -547,6 +570,32 @@
     .table td, .table th {
         font-size: 16px !important;
     }
+   .b-topbox {
+        padding-top: 120px;
+        padding-bottom: 50px;
+    }
+    .b-topbox div img {
+        width: 100% !important;
+    }
+    .b-toptext {
+        font-size: 24px !important;
+        font-weight: 500 !important;
+        line-height: 1.5;
+        letter-spacing: .005em;
+        padding-bottom: 110px;
+        padding-left: 50px;
+        padding-right: 50px;
+    } 
+    .b-box-title {
+        font-size: 40px;
+        font-weight: 500 !important;
+    }
+    .a-box-text,.b-box-text {
+        padding: 20px;
+    }
+    .b-wrapper {
+        padding-bottom: 200px;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 991.98px){
     .contact-box,.contact-toptext {
@@ -571,6 +620,32 @@
     .com-toptext {
         padding-top: 100px;
         padding-bottom: 40px;
+    }
+    .b-topbox {
+        padding-top: 120px;
+        padding-bottom: 50px;
+    }
+    .b-topbox div img {
+        width: 80% !important;
+    }
+    .b-toptext {
+        font-size: 24px !important;
+        font-weight: 500 !important;
+        line-height: 1.5;
+        letter-spacing: .005em;
+        padding-bottom: 110px;
+        padding-left: 50px;
+        padding-right: 50px;
+    } 
+    .b-box-title {
+        font-size: 40px;
+        font-weight: 500 !important;
+    }
+    .a-box-text,.b-box-text {
+        padding: 20px;
+    }
+    .b-wrapper {
+        padding-bottom: 200px;
     }
 }
 @media screen and (min-width: 992px) and (max-width: 1199.98px){
