--- a/style.css
+++ b/style.css
@@ -1028,13 +1028,25 @@ input[type=checkbox], input[type=radio] {
 }
 /*---サイドバーのスタイル---*/
 /*--検索ボックス--*/
+#searchform div {
+    letter-spacing: -1em;
+}
 #searchform div input {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    padding-left: 15px;
+    padding-right: 15px;
     border: 2px solid #0e1827;
+    letter-spacing: 0em;
+    vertical-align: middle;
+}
+#searchform div input[type="text"] {
+    max-width: 180px;
 }
 #searchsubmit {
+    font-family: "Font Awesome 5 Free";
     color: #fff;
+    font-weight: 900;
     background-color: #0e1827;
 }
 /*---------------------------------------------
